--- a/README
+++ b/README
@@ -8,12 +8,12 @@ Change HDF5_DIR to your hdf5 install path, type make to generate the dynamic sha
 Link to application
 =================
 Set these environment variables:
-HDF5_VOL_CONNECTOR=provenance under_vol=0;under_info={};path=$YOUR_TRACE_FILE_PATH;level=2;format= 
+HDF5_VOL_CONNECTOR="provenance under_vol=0;under_info={};path=$YOUR_TRACE_FILE_PATH;level=2;format="
 # Trace file path including the path and the file name.
 # Level 1 for prints only, level 2 for file only, level 3 for file and prints.
 # Leave format blank for now
 
-HDF5_PLUGIN_PATH=$PATH_TO_SO_FILE_DIR.     
+HDF5_PLUGIN_PATH=$PATH_TO_SO_FILE_DIR.
 #the path that holds libh5prov.so.
 
 Then make your hdf5 application as usual, no need to change it's code or Makefile.
